# bernard

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
prds/: README.md  prd-000-engineering-process.md  prd-001-foundation-and-cli.md  prd-002-duckdb-schema-and-profiling.md  prd-003-chat-and-safety.md  prd-004-context-and-semantic-metadata.md
src/bernard/: __init__.py  __main__.py  cli.py  config.py
tests/: test_cli.py
