[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bernard"
version = "0.1.0"
description = "Local-first, chat-first terminal SQL assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.16.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[project.scripts]
bernard = "bernard.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
